<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Global Comments</string>
    <string name="action_settings">Settings</string>
    <string name="login_enter">Please login to continue.</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log In</string>
    <string name="login_error_message">Log in failed.</string>
    <string name="login_createAccount">Create Account</string>
    <string name="signup_email">Email Address</string>
    <string name="signup_text">Create a username and password.</string>
    <string name="signup_repeat_password">Repeat Password</string>
    <string name="signup_signup">Sign Up</string>
    <string name="post_create">Create a new post</string>
    <string name="post">Post</string>
    <string name="post_hint">Type Message Here</string>
    <string name="postComment">Post Comment</string>
    <string name="post_tooFar">This comment is too far away for you to read.</string>
    <string name="search_range">Search Range (ft):</string>
    <string name="gotoMapView">Switch to Map View</string>
    <string name="updateDist">Update Dist</string>
    <string name="search_distance">Search Distance (ft):</string>
    <string name="num_300">300</string>
    <string name="num_2000">2000</string>
    <string name="num_5000">5000</string>
    <string name="num_10000">10000</string>
    <string name="log_out">Log Out</string>
    <string name="organizeBy">Enable Notifications</string>
    <string-array name="organize">
        <item>Age</item>
        <item>Popularity</item>
        <item>Distance</item>
    </string-array>

</resources>
