<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text" />

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:text="@string/login_error_message" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/login_error_message"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password1"
        android:layout_below="@+id/password1"
        android:layout_marginTop="76dp"
        android:text="@string/signup_signup" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password1"
        android:layout_alignRight="@+id/password1"
        android:layout_below="@+id/password1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/signup_repeat_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/email"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

</RelativeLayout>