<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_enter" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/login_error_message"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:text="@string/login_error_message" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password1"
        android:layout_below="@+id/password1"
        android:layout_marginTop="14dp"
        android:text="@string/login_login" />

    <TextView
        android:id="@+id/login_createLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="33dp"
        android:text="@string/login_createAccount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp" />

</RelativeLayout>