<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/set_distTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:text="@string/search_distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_distTitle"
        android:layout_below="@+id/set_distTitle" >

        <RadioButton
            android:id="@+id/set_dist300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_300" />

        <RadioButton
            android:id="@+id/set_dist2000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_2000" />

        <RadioButton
            android:id="@+id/set_dist5000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_5000" />

        <RadioButton
            android:id="@+id/set_dist10000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_10000" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/set_btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/view1"
        android:text="@string/log_out" />
</RelativeLayout>
